@startuml
class SequelizeMeta {
  + name: VARCHAR(255)
}
class svt_bollettino {
  + id: INT
  + id_multa: INT
  + uuid: VARCHAR(255)
  + importo: INT
  + path_bollettino: VARCHAR(255)
  + stato: ENUM('richiesto','emesso','pagato')
  + createdAt: DATETIME
  + updatedAt: DATETIME
}
class svt_multa {
  + id: INT
  + id_transito: INT
  + id_policy: INT
  + tipo_policy: ENUM('speed control')
  + id_veicolo: INT
  + id_automobilista: INT
  + is_notturno: TINYINT(1)
  + is_recidivo: TINYINT(1)
  + stato: ENUM('indefinito','in attesa','elaborato')
  + createdAt: DATETIME
  + updatedAt: DATETIME
}
class svt_multa_speed_control {
  + id_multa: INT
  + speed: INT
  + speed_real: INT
  + speed_limit: INT
  + speed_delta: INT
  + createdAt: DATETIME
  + updatedAt: DATETIME
}
class svt_plc_policy {
  + id: INT
  + cod: VARCHAR(255)
  + descrizione: VARCHAR(255)
  + tipo: ENUM('speed control')
  + stato: ENUM('attivo','disattivo')
  + createdAt: DATETIME
  + updatedAt: DATETIME
}
class svt_plc_sanction {
  + id: INT
  + tipo_policy: ENUM('speed control')
  + cod: VARCHAR(255)
  + descrizione: VARCHAR(255)
  + costo_min: INT
  + costo_max: INT
  + costo_punti_patente: INT
  + stato: ENUM('attivo','disattivo')
  + createdAt: DATETIME
  + updatedAt: DATETIME
}
class svt_plc_sanction_speed_control {
  + id_policy_sanction: INT
  + speed_min: INT
  + speed_max: INT
  + createdAt: DATETIME
  + updatedAt: DATETIME
}
class svt_plc_speed_control {
  + id_policy: INT
  + meteo: ENUM('sereno','pioggia')
  + veicolo: ENUM('automobile','motoveicoli','camion','indefinito')
  + speed_limit: INT
  + createdAt: DATETIME
  + updatedAt: DATETIME
}
class svt_transito {
  + id: INT
  + data_transito: DATETIME
  + speed: INT
  + speed_real: INT
  + id_varco: INT
  + meteo: ENUM('sereno','pioggia')
  + id_veicolo: INT
  + path_immagine: VARCHAR(255)
  + stato: ENUM('indefinito','in attesa','elaborato','in attesa di ocr','illeggibile')
  + createdAt: DATETIME
  + updatedAt: DATETIME
}
class svt_tratta {
  + id: INT
  + cod: VARCHAR(255)
  + descrizione: VARCHAR(255)
  + id_varco_ingresso: INT
  + id_varco_uscita: INT
  + distanza: INT
  + stato: ENUM('attivo','disattivo')
  + createdAt: DATETIME
  + updatedAt: DATETIME
}
class svt_tratta_policy {
  + id_tratta: INT
  + id_policy: INT
  + createdAt: DATETIME
  + updatedAt: DATETIME
}
class svt_varco {
  + id: INT
  + cod: VARCHAR(255)
  + descrizione: VARCHAR(255)
  + latitudine: DECIMAL(9,6)
  + longitudine: DECIMAL(9,6)
  + stato: ENUM('attivo','disattivo')
  + createdAt: DATETIME
  + updatedAt: DATETIME
}
class svt_varco_policy {
  + id_varco: INT
  + id_policy: INT
  + createdAt: DATETIME
  + updatedAt: DATETIME
}
class svt_veicolo {
  + id: INT
  + tipo: ENUM('automobile','motoveicoli','camion','indefinito')
  + targa: VARCHAR(255)
  + stato: ENUM('in_attesa','acquisito')
  + createdAt: DATETIME
  + updatedAt: DATETIME
}
class utn_prf_permesso {
  + id: INT
  + tipo: ENUM('lettura','scrittura')
  + categoria: ENUM('varco','transito','tratta','veicolo','multa','bollettino')
  + cod: VARCHAR(255)
  + descrizione: VARCHAR(255)
  + stato: ENUM('attivo','disattivo')
  + createdAt: DATETIME
  + updatedAt: DATETIME
}
class utn_prf_profilo {
  + id: INT
  + cod: VARCHAR(255)
  + descrizione: VARCHAR(255)
  + enum_profilo: ENUM('varco','operatore','automobilista')
  + stato: ENUM('attivo','disattivo')
  + createdAt: DATETIME
  + updatedAt: DATETIME
}
class utn_profilo_permesso {
  + id_profilo: INT
  + id_permesso: INT
  + createdAt: DATETIME
  + updatedAt: DATETIME
}
class utn_utente {
  + id: INT
  + identificativo: VARCHAR(255)
  + stato: ENUM('attivo','disattivo')
  + createdAt: DATETIME
  + updatedAt: DATETIME
}
class utn_utente_profilo {
  + id_utente: INT
  + id_profilo: INT
  + createdAt: DATETIME
  + updatedAt: DATETIME
}
class utn_utente_veicolo {
  + id_utente: INT
  + id_veicolo: INT
  + createdAt: DATETIME
  + updatedAt: DATETIME
}
svt_bollettino --> svt_multa : FK id_multa to id
svt_multa --> svt_transito : FK id_transito to id
svt_multa --> svt_plc_policy : FK id_policy to id
svt_multa --> svt_veicolo : FK id_veicolo to id
svt_multa --> utn_utente : FK id_automobilista to id
svt_multa_speed_control --> svt_multa : FK id_multa to id
svt_plc_sanction_speed_control --> svt_plc_sanction : FK id_policy_sanction to id
svt_plc_speed_control --> svt_plc_policy : FK id_policy to id
svt_transito --> svt_varco : FK id_varco to id
svt_transito --> svt_veicolo : FK id_veicolo to id
svt_tratta --> svt_varco : FK id_varco_ingresso to id
svt_tratta --> svt_varco : FK id_varco_uscita to id
svt_tratta_policy --> svt_tratta : FK id_tratta to id
svt_tratta_policy --> svt_plc_policy : FK id_policy to id
svt_varco_policy --> svt_varco : FK id_varco to id
svt_varco_policy --> svt_plc_policy : FK id_policy to id
utn_profilo_permesso --> utn_prf_profilo : FK id_profilo to id
utn_profilo_permesso --> utn_prf_permesso : FK id_permesso to id
utn_utente_profilo --> utn_utente : FK id_utente to id
utn_utente_profilo --> utn_prf_profilo : FK id_profilo to id
utn_utente_veicolo --> utn_utente : FK id_utente to id
utn_utente_veicolo --> svt_veicolo : FK id_veicolo to id
@enduml